# beancount-no-bank-norwegian

./: CHANGELOG.md  LICENSE  README.md  justfile  main.py  pyproject.toml  quicktest.py  release-please-config.json
.github/workflows/: release-please.yml  release.yml
beancount_no_sparebank1/: __init__.py  balance.py  deposit.py  deposit_categorizer.py
src/beancount_no_banknorwegian/: deposit.py
src/beancount_no_sparebank1/: balance.py  deposit.py
test_data/: banknorwegian.csv  banknorwegian.csv.beancount  banknorwegian_data.csv.beancount  banknorwegian_data.csv.beancount.manual  sb1.csv  sb1.csv.beancount
